# f3_wallet

./: pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
integration_test/: main.dart
lib/: bridge_definitions.dart  bridge_generated.io.dart  main.dart  off_topic_code.dart
lib/ffi/: bridge_generated.dart  bridge_generated.web.dart
lib/model/: storage_item.dart
lib/model/currency/: Currencies.dart
lib/model/message/: general.dart
lib/screen/: account_page.dart  add_page.dart  error_page.dart  home_page.dart  home_view.dart  loading_page.dart  multsig_approve_page.dart  multsig_cancel_page.dart  multsig_create_page copy.dart  multsig_send_page copy.dart  qrcode_page.dart  result_page.dart  scan_page.dart  single_send_page copy.dart  single_send_page.dart  static_page.dart  transfer_page.dart
lib/screen/multisig/: multsig_approve_page copy.dart  multsig_cancel_page copy.dart  multsig_cancel_page.dart  multsig_create_page.dart  multsig_send_page copy.dart
lib/services/: lotus.dart  lotus.dart.bak  lotus_gas.dart  lotus_message.dart  lotus_nonce.dart  lotus_result.dart  lotus_tipset.dart  secure_storeage.dart
lib/utils/: confirmation.dart  encryption.dart  hivedb.dart  hivedb_encrypted.dart
lib/widget/: asset_card.dart  edit_data_dialog.dart  sign_message.dart  sign_message_item.dart  vault_card.dart  verify_password.dart
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
test/: widget_test.dart
(+1 files in other folders)
