[package]
name = "flutter_rust_bridge_example"
version = "0.1.0"
edition = "2018"

[lib]
name = "flutter_rust_bridge_example"
crate-type = ["cdylib"]

[workspace]
members = ["."]

[build-dependencies]
flutter_rust_bridge_codegen = { version = "1", features = ["chrono", "uuid"] }

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
flutter_rust_bridge = { version = "1" }
num = "0.4"                                               # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
image = "0.24.3"                                          # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
crossbeam = "0.8"                                         # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
hex = "0.4.3"
# flair-wallet ={ path = "./flair-wallet" }
flair-wallet = { git = "https://github.com/hanbu97/flair-wallet.git", rev = "494202779" }
